--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Laravel Geolocation Request",
     "type": "library",
     "require": {
-        "illuminate/http": "^5.6",
+        "php": ">=7.1",
+        "laravel/framework": "^5.6",
         "divineomega/php-geolocation": "^2.0",
         "divineomega/do-file-cache-psr-6": "^2.0"
     },
