--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "require": {
         "php": ">=7.1",
-        "laravel/framework": "^5.6",
+        "laravel/framework": "^5.6||^6.0||^7.0||^8.0",
         "divineomega/php-geolocation": "^2.0",
         "divineomega/do-file-cache-psr-6": "^2.0"
     },
